[package]
name = "rustling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
csv = { version = "=1.1.6", default-features = false }
rust_decimal = { version = "=1.23.1", default-features = false, features = ["serde"] }
